improvements in EduPlan, SchoolSections and VseLists setup